Fixed public URL.

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
 	<title>Story Shuffler</title>
 
-	<script type="module">import init from '/story_shuffler.js';init('/story_shuffler_bg.wasm');</script>
-	<base href="/">
+	<script type="module">import init from '/story-shuffler/story_shuffler.js';init('/story-shuffler/story_shuffler_bg.wasm');</script>
+	<base href="/story-shuffler/">
 
-	<link rel="icon" href="/favicon.ico">
+	<link rel="icon" href="/story-shuffler/favicon.ico">
 
 	
 	
@@ -52,10 +52,10 @@
 	<meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
 	<meta name="theme-color" media="(prefers-color-scheme: dark)" content="#404040">
 
-	<link rel="stylesheet" href="/story_shuffler.css">
+	<link rel="stylesheet" href="/story-shuffler/story_shuffler.css">
 
-<link rel="preload" href="/story_shuffler_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/story_shuffler.js"></head>
+<link rel="preload" href="/story-shuffler/story_shuffler_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/story-shuffler/story_shuffler.js"></head>
 
 <body>
 <!-- The WASM code will resize the canvas dynamically. -->
